--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,29 +1,19 @@
-<android.support.v7.widget.CardView
-    android:id="@+id/cardview"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:layout_margin="10dp"
-    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:elevation="6dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="2dp">
+    android:layout_height="match_parent"
+    android:background="@color/black_alpha">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ripple"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/fragment_list_item_title"
             style="@style/Widget.FlickrList.Text.Gray"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="3"
             android:transitionName="title"/>
 
         <TextView
@@ -31,14 +21,16 @@
             style="@style/Widget.FlickrList.Text.Gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:transitionName="author"/>
+            android:transitionName="author"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
         <ImageView
             android:id="@+id/fragment_list_item_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_gravity="center"
             android:scaleType="center"
             android:transitionName="image"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+</ScrollView>
