--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="FlickrTheme" parent="android:Theme.Material.Light">
-        <!-- Customize your theme here. -->
-        <item name="android:colorPrimary">@color/red</item>
+    <style name="FlickrTheme" parent="android:Theme.Material.Light.DarkActionBar">
+        <item name="android:colorPrimary">@color/gray_dark</item>
+        <item name="android:colorAccent">@color/red</item>
+        <item name="android:colorControlHighlight">@color/gray</item>
 
         <!-- enable transitions -->
         <item name="android:windowContentTransitions">true</item>
@@ -14,14 +15,49 @@
         <!--<item name="android:windowTranslucentNavigation">true</item>-->
 
         <!-- activity enter and exit transitions -->
-        <item name="android:windowEnterTransition">@android:transition/move</item>
-        <item name="android:windowExitTransition">@android:transition/move</item>
+        <item name="android:windowEnterTransition">@transition/trans_move</item>
+        <item name="android:windowExitTransition">@transition/trans_move</item>
 
         <!-- shared element transitions -->
         <item name="android:windowSharedElementEnterTransition">
-            @transition/trans_move</item>
+            @transition/trans_move
+        </item>
         <item name="android:windowSharedElementExitTransition">
-            @transition/trans_move</item>
+            @transition/trans_move
+        </item>
     </style>
+
+
+    <style name="Widget.FlickrList.EditText.FloatLabel" parent="android:TextAppearance.Small">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/xsmall_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+    </style>
+
+
+    <style name="Widget.FlickrList.EditText" parent="android:TextAppearance.Small">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/xsmall_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+    </style>
+
+    <style name="FloatingActionButton" parent="android:Widget.Material.Button">
+        <item name="android:background">@drawable/button_background_red</item>
+        <item name="android:stateListAnimator">@anim/fab_state_list_animator</item>
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+    </style>
+
+    <style name="Widget.FlickrList.Text.Gray" parent="android:TextAppearance.Small">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginTop">@dimen/activity_horizontal_margin</item>
+    </style>
+
 
 </resources>
